# tinyfy

./: README.rst  pyproject.toml  requirements.txt  requirements2.txt
flaskr/: __init__.py  auth.py  db.py  models.py  schema.sql
flaskr/templates/: base copy.html  base.html  index.html
flaskr/templates/auth/: register.html
flaskr/templates/url/: index.html  list.html  stats.html  update.html  view.html
flaskr/url/: url_service.py  views.py
